--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,13 +52,15 @@ nav:
   - 技术:
     - tech/index.md
   - 随笔: 
-    - index.md 
+    - note/index.md
+    - 打油诗: note/poem.md
   - 读书笔记:
     - reading/index.md
   - 关于:
     - about/index.md # 使用两个index 这样子左上角第一次打开会是所有Tab 而不是ABOUT
     - 个人履历: about/cv-full.md
     - 支持作者: about/support.md
+    
 
 
 # [Extensions]
