--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # [Info]
 site_name: Xinyi's Website # 左上角标题
-site_url: https://lee-emqx.github.io
+site_url: https://xinyi-zen.github.io
 site_author: xinyi
 site_description: Xinyi's Website
 
@@ -52,8 +52,6 @@ nav:
   - 技术:
     - tech/index.md
     - QUIC with cubic or bbr: tech/quic_with_cubic_bbr.md
-
-
 
   - 随笔: 
     - note/index.md
