--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # [Info]
 site_name: Xinyi's Website # 左上角标题
-site_url: https://xinyi-zen.github.io
+site_url: https://xinyi-xs.github.io
 site_author: xinyi
 site_description: Xinyi's Website
 
